# hybridFlu

./: AUTHORS  ChangeLog  INSTALL  NEWS  README  bashrc.in  build_configure  configure.in  env.sh
IFoam/: foam_smesh_tools.py  pysalome.py  smesh2foam.py
IFoam/examples/: README  __init__.py  run_examples  test_create_smesh.py  test_foam2vtk.py  test_icoFoam_base.py  test_icoFoam_embedded.py  test_icoFoam_piso_1.py  test_icoFoam_piso_2.py  test_icoFoam_salome2unv.py  test_icoFoam_scratch.py  test_icoFoam_smesh2foam.py  test_salome_icoFoam.py  test_unv2foam_embedded.py  test_unv2foam_standalone.py
IFoam/examples/case_foam2vtk/0/: phi
IFoam/examples/case_foam2vtk/constant/polyMesh/: boundary  faces  points
IFoam/examples/case_icoFoam/constant/: transportProperties
IFoam/examples/case_icoFoam/constant/polyMesh/: faces  neighbour
IFoam/examples/case_icoFoam_embedded/constant/tmp/polyMesh/: points
IFoam/examples/case_icoFoam_embedded/system/tmp/: fvSchemes
IFoam/examples/case_icoFoam_piso/constant/polyMesh/: blockMeshDict  faces  neighbour
IFoam/examples/case_icoFoam_scratch/system/tmp/: fvSolution
IFoam/examples/case_unv2foam/0/: U
IFoam/examples/case_unv2foam/0/uniform/: time
IFoam/examples/case_unv2foam/system/: controlDict
admin/: hybridflu_check_solver.m4
hybridFlu/: __init__.py  foam2visu.py  foam2vtk.py  pysalome.py  smesh2foam.py  vtkPlotter.py
hybridFlu/examples/: README  __init__.py  run_examples  test_create_smesh.py  test_foam2vtk.py  test_icoFoam_base.py  test_icoFoam_embedded.py  test_icoFoam_file.py  test_icoFoam_piso_1.py  test_icoFoam_piso_2.py  test_icoFoam_salome2unv.py  test_icoFoam_scratch.py  test_icoFoam_smesh2foam.py  test_salome_icoFoam.py  test_unv2foam_embedded.py  test_unv2foam_standalone.py
hybridFlu/examples/case_foam2vtk/0/: U  p
hybridFlu/examples/case_foam2vtk/constant/polyMesh/: neighbour  owner
hybridFlu/examples/case_foam2vtk/system/: fvSolution
hybridFlu/examples/case_icoFoam/0/: phi
hybridFlu/examples/case_icoFoam/constant/polyMesh/: boundary  cells  owner  points
hybridFlu/examples/case_icoFoam/system/: fvSchemes
hybridFlu/examples/case_icoFoam_embedded/constant/tmp/polyMesh/: cells
hybridFlu/examples/case_icoFoam_piso/constant/: transportProperties
hybridFlu/examples/case_icoFoam_piso/constant/polyMesh/: boundary  owner  points
hybridFlu/examples/case_icoFoam_piso/system/: controlDict  fvSolution
hybridFlu/examples/case_icoFoam_scratch/constant/tmp/polyMesh/: boundary  faces  neighbour  owner
hybridFlu/examples/case_unv2foam/0/: p
hybridFlu/examples/case_unv2foam/system/: fvSolution
