## VulaSHAKA (Simultaneous Neutronic, Fuel Performance, Heat And Kinetics Analysis)
## Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
## 
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.
## 
## See https://vulashaka.svn.sourceforge.net/svnroot/vulashaka/ifoam
##
## Author : Alexey PETROV
##


#--------------------------------------------------------------------------------------
# Process this file with autoconf to produce a configure script
#--------------------------------------------------------------------------------------
AC_INIT([IFoam Project], [0.3], [alexey.petrov.nnov@gmail.com], [ifoam])

# AC_CONFIG_AUX_DIR defines an alternative directory where to find the auxiliary
# scripts such as config.guess, install-sh, ...
AC_CONFIG_AUX_DIR(admin)
AC_CONFIG_MACRO_DIR([admin])
AM_INIT_AUTOMAKE([tar-pax -Wno-portability])

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_OPENFOAM
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_PYFOAM
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_FOAM2VTK
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_UNV2FOAM
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_FOAM2MED
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_IPYTHON
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_PYTHON_PMW
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_PYTHON_TKINTER
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_SALOME_GEOM
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_SALOME_SMESH
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_SALOME_VISU
echo 

echo "--------------------------------------------------------------------------------------"
#CONFFOAM_CHECK_SALOME_FOAM
echo 

echo "---------------------------- mandatory products --------------------------------"
CONFFOAM_PRINT_SUMMURY( "openfoam_ok pyfoam_ok ipython_ok" )
echo
echo "---------------------------- optional products ---------------------------------"
CONFFOAM_PRINT_SUMMURY( "foam2vtk_ok unv2foam_ok foam2med_ok python_pmw_ok python_tkinter_ok salome_geom_ok salome_smesh_ok salome_visu_ok salome_foam_ok" )
echo
echo "--------------------------------------------------------------------------------"
CONFFOAM_CHECK_MANDATORY( "openfoam_ok pyfoam_ok ipython_ok" )


#--------------------------------------------------------------------------------------
AC_OUTPUT( [ bashrc ] )


echo "------------------------------------ OK -----------------------------------------"
